--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -6,10 +6,8 @@
    "metadata": {},
    "source": [
     "# Final Assignment: Predicting Chess Game Outcomes\n",
-    "## Statistical Learning - Master in ACIT, 2024-2025\n",
+    "## Statistical Learning - Master in ACIT, 2025\n",
     "\n",
-    "**Student:** [Your Name]  \n",
-    "**Date:** [Date]\n",
     "\n",
     "---\n",
     "\n",
@@ -25,63 +23,6 @@
     "8. [Results Visualization](#8-results-visualization)\n",
     "9. [Discussion & Interpretation](#9-discussion--interpretation)\n",
     "10. [Conclusion](#10-conclusion)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7e6b9e87",
-   "metadata": {},
-   "source": [
-    "# 1. Introduction & Problem Formulation\n",
-    "\n",
-    "## 1.1 Research Questions\n",
-    "\n",
-    "This project aims to answer the following questions:\n",
-    "\n",
-    "1. **Primary Question (conditional on opening):** Can we predict the winner of a chess game (white, black, or draw) given the opening used (i.e., after the opening is observed/declared) together with pre-game factors such as player ratings and time controls?\n",
-    "\n",
-    "   - This framing treats winner prediction as conditional on early-game information (the opening), which is often known within the first moves. No post-game information is used.\n",
-    "\n",
-    "2. **Secondary Question:** What factors influence game length (number of turns), and can we accurately predict how long a game will last?\n",
-    "\n",
-    "## 1.2 Prediction Scenario and Scope\n",
-    "\n",
-    "- **Scope:** Winner prediction is evaluated conditional on the known opening and other pre-/early-game features (ratings, time control, opening ply). Features that rely on the final outcome (e.g., victory status) are excluded to prevent leakage.\n",
-    "- **Implication:** Opening-derived features (e.g., `opening_category`, basic interactions with ratings/time) are allowed; outcome-driven constructs (e.g., win-rate-based clusters) are not used in supervised models.\n",
-    "\n",
-    "## 1.3 Problem Motivation\n",
-    "\n",
-    "Understanding what factors influence chess game outcomes has practical applications in:\n",
-    "- **Matchmaking systems:** Optimizing player pairings based on predicted game characteristics\n",
-    "- **Chess platforms:** Providing insights to players about opening choices and game dynamics\n",
-    "- **Training recommendations:** Helping players understand which openings lead to longer games or specific outcomes\n",
-    "\n",
-    "## 1.4 Dataset Overview\n",
-    "\n",
-    "This analysis uses the **Chess Game Dataset (Lichess)** from Kaggle, containing data from over 20,000 chess games played on the online chess server Lichess. The dataset includes:\n",
-    "\n",
-    "- Game outcomes (winner, victory status)\n",
-    "- Player ratings (white and black Elo ratings)\n",
-    "- Opening information (opening names, ECO codes)\n",
-    "- Game characteristics (number of turns, time controls, rated status)\n",
-    "- Full move sequences\n",
-    "\n",
-    "## 1.5 Methodological Approach\n",
-    "\n",
-    "This analysis employs a comprehensive statistical learning approach:\n",
-    "\n",
-    "1. **Unsupervised Learning:**\n",
-    "   - **Dimension Reduction:** Principal Component Analysis (PCA) to visualize and reduce dimensionality\n",
-    "   - (Optional) Clustering analyses are reported for insight but not used as supervised features when outcome-derived.\n",
-    "\n",
-    "2. **Supervised Learning:**\n",
-    "   - **Classification:** Predicting game winner using Logistic Regression, Random Forest, and XGBoost\n",
-    "   - **Regression:** Predicting game length using Linear Regression, Ridge, Lasso, and Random Forest Regressor\n",
-    "\n",
-    "3. **Evaluation and Leakage Prevention:**\n",
-    "   - All preprocessing and SMOTE occur inside cross-validation pipelines fit on training folds only\n",
-    "   - No post-game features are used; opening features are allowed due to the conditional framing\n",
-    "   - Metrics emphasize balanced accuracy and F1 due to class imbalance\n"
    ]
   },
   {
