chore: notebook cleanup and formatting

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -1628,7 +1628,7 @@
    "source": [
     "# 4. Feature Engineering\n",
     "\n",
-    "In this section, we create new features that may be more predictive than the raw features.\n"
+    "\n"
    ]
   },
   {
@@ -1825,7 +1825,7 @@
    "source": [
     "## 4.1 Enhanced Correlation Analysis (After Feature Engineering)\n",
     "\n",
-    "Now that we have engineered features, let's analyze correlations with all features.\n"
+    "\n"
    ]
   },
   {
@@ -2292,8 +2292,7 @@
     "# 5. Unsupervised Learning: Clustering & Dimension Reduction\n",
     "\n",
     "## 5.1 Principal Component Analysis (PCA)\n",
-    "\n",
-    "PCA is used to reduce dimensionality and visualize the feature space.\n"
+    "\n"
    ]
   },
   {
@@ -2340,14 +2339,7 @@
    "id": "486e3780",
    "metadata": {},
    "source": [
-    "## 5.2 Clustering Openings\n",
-    "\n",
-    "We cluster openings based on their characteristics to identify patterns. This analysis includes:\n",
-    "- Enhanced feature engineering (game length variability, draw rates, rating differences)\n",
-    "- Comprehensive evaluation of multiple cluster numbers (2-8) using multiple metrics\n",
-    "- Comparison of K-Means and Hierarchical clustering methods\n",
-    "- Statistical validation of clusters against game outcomes\n",
-    "- Enhanced visualizations (PCA, t-SNE, dendrograms)\n"
+    "## 5.2 Clustering Openings\n"
    ]
   },
   {
@@ -3842,11 +3834,7 @@
    "source": [
     "### 5.2.7 Summary\n",
     "\n",
-    "**Key Findings:**\n",
-    "- Optimal number of clusters: Determined through comprehensive evaluation\n",
-    "- Cluster quality: Evaluated using Silhouette Score and Davies-Bouldin Index\n",
-    "- Cluster validation: Statistical tests confirm clusters are meaningful predictors\n",
-    "- Method comparison: K-Means and Hierarchical clustering show good agreement\n"
+    "\n"
    ]
   },
   {
@@ -3924,9 +3912,7 @@
    "id": "ef95c0bb",
    "metadata": {},
    "source": [
-    "## 6.0 Feature Selection Fix for Classification\n",
-    "\n",
-    "**IMPORTANT FIX:** The original feature selection included `turns`, which is the regression target variable. This would cause data leakage in classification (we can't know game length before the game ends). This cell fixes the feature selection.\n"
+    "## 6.0 Feature Selection Fix for Classification\n"
    ]
   },
   {
@@ -4044,9 +4030,7 @@
    "id": "673515b3",
    "metadata": {},
    "source": [
-    "## 6.1.1 Addressing Class Imbalance\n",
-    "\n",
-    "The dataset has imbalanced classes (draws: 4.74%, white: 49.86%, black: 45.40%). We'll use SMOTE to balance the training set.\n"
+    "## 6.1.1 Addressing Class Imbalance\n"
    ]
   },
   {
@@ -4108,7 +4092,7 @@
    "source": [
     "## 6.2.1 Improved Logistic Regression (with class imbalance handling and tuning)\n",
     "\n",
-    "This improved version addresses class imbalance and includes hyperparameter tuning.\n"
+    "\n"
    ]
   },
   {
@@ -4615,7 +4599,7 @@
    "source": [
     "## 6.5.1 Improved XGBoost with Hyperparameter Tuning\n",
     "\n",
-    "This improved version includes proper hyperparameter tuning and class imbalance handling.\n"
+    "\n"
    ]
   },
   {
@@ -7702,127 +7686,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "3d8761ef",
-   "metadata": {},
-   "source": [
-    "# 9. Discussion & Interpretation\n",
-    "\n",
-    "## 9.1 Key Findings\n",
-    "\n",
-    "### Classification (Winner Prediction)\n",
-    "\n",
-    "**Main findings:**\n",
-    "- [Summarize which model performed best and why]\n",
-    "- [Discuss feature importance - what factors are most predictive of winner]\n",
-    "- [Interpret confusion matrix - which classes are easier/harder to predict]\n",
-    "- [Discuss any patterns observed (e.g., rating difference strongly predicts winner)]\n",
-    "\n",
-    "### Regression (Game Length Prediction)\n",
-    "\n",
-    "**Main findings:**\n",
-    "- [Summarize which model performed best and why]\n",
-    "- [Discuss feature importance for game length]\n",
-    "- [Interpret R² and RMSE - how well can we predict game length]\n",
-    "- [Discuss factors that lead to longer/shorter games]\n",
-    "\n",
-    "### Unsupervised Learning\n",
-    "\n",
-    "**Clustering insights:**\n",
-    "- [What patterns were discovered in opening clusters]\n",
-    "- [How do different clusters relate to game outcomes]\n",
-    "- [What do the clusters represent in terms of gameplay style]\n",
-    "\n",
-    "**PCA insights:**\n",
-    "- [How much variance is explained by first few components]\n",
-    "- [What do the principal components represent]\n",
-    "- [Are there clear patterns in the PCA visualization]\n",
-    "\n",
-    "## 9.2 Methodological Reflections\n",
-    "\n",
-    "**Why these methods were appropriate:**\n",
-    "- [Justify choice of classification methods]\n",
-    "- [Justify choice of regression methods]\n",
-    "- [Justify choice of clustering and dimensionality reduction techniques]\n",
-    "- [Discuss trade-offs between interpretability and performance]\n",
-    "\n",
-    "**Alternative approaches considered:**\n",
-    "- [What other methods could have been used]\n",
-    "- [Why they were not chosen or could be future work]\n",
-    "\n",
-    "## 9.3 Limitations\n",
-    "\n",
-    "**Data limitations:**\n",
-    "- [Dataset size and representativeness]\n",
-    "- [Missing features that could be useful]\n",
-    "- [Potential biases in the data]\n",
-    "\n",
-    "**Methodological limitations:**\n",
-    "- [Assumptions made]\n",
-    "- [Limitations of chosen methods]\n",
-    "- [What could be improved with more time/resources]\n",
-    "\n",
-    "## 9.4 Practical Implications\n",
-    "\n",
-    "**For chess platforms:**\n",
-    "- [How could these findings be used in matchmaking]\n",
-    "- [What insights for players]\n",
-    "\n",
-    "**For chess players:**\n",
-    "- [What opening choices might be better]\n",
-    "- [How rating differences affect outcomes]\n",
-    "- [What factors influence game length]\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e8c64edd",
-   "metadata": {},
-   "source": [
-    "# 10. Conclusion\n",
-    "\n",
-    "## 10.1 Summary of Contributions\n",
-    "\n",
-    "This analysis successfully:\n",
-    "\n",
-    "1. **Predicted game winners** with [X]% accuracy using [best model]\n",
-    "2. **Predicted game length** with [RMSE] turns using [best model]\n",
-    "3. **Identified [N] distinct opening clusters** with different characteristics\n",
-    "4. **Reduced dimensionality** using PCA, explaining [X]% of variance with [N] components\n",
-    "\n",
-    "## 10.2 Take-Home Messages\n",
-    "\n",
-    "1. **[Main finding 1]**\n",
-    "   - [Supporting detail]\n",
-    "\n",
-    "2. **[Main finding 2]**\n",
-    "   - [Supporting detail]\n",
-    "\n",
-    "3. **[Main finding 3]**\n",
-    "   - [Supporting detail]\n",
-    "\n",
-    "## 10.3 Methodological Insights\n",
-    "\n",
-    "**What we learned about method selection:**\n",
-    "- [Insights about when to use different methods]\n",
-    "- [Trade-offs observed]\n",
-    "- [Lessons for future analyses]\n",
-    "\n",
-    "## 10.4 Future Work\n",
-    "\n",
-    "**Potential extensions:**\n",
-    "- [Deep learning models]\n",
-    "- [Time-series analysis of moves]\n",
-    "- [More sophisticated feature engineering]\n",
-    "- [Analysis of specific player types]\n",
-    "- [Integration of move quality metrics]\n",
-    "\n",
-    "## 10.5 Final Remarks\n",
-    "\n",
-    "[Brief concluding statement about the value of this analysis and the insights gained]\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 63,
    "id": "91f9334d",
@@ -8129,43 +7992,6 @@
     "    print(best_reg_line)\n",
     "else:\n",
     "    print(\"Regression summary not available (run regression cells above).\")\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2f139149",
-   "metadata": {},
-   "source": [
-    "# 9. Discussion & Interpretation (Condensed)\n",
-    "\n",
-    "- **Framing (conditional on opening):** Models use opening information available early in the game, plus pre-/early-game features (ratings, time control). Outcome-based features are excluded to avoid leakage.\n",
-    "- **Classification:** See the “RESULTS SUMMARY” cell for the best model and its improvement over the majority baseline. Opening category and rating signals are typically influential; tree-based models often highlight time control and rating difference as important.\n",
-    "- **Regression:** The extended comparison indicates whether log-transform or Poisson better captures skewed game length. Report the best RMSE/MAE/R² from the summary above.\n",
-    "- **Cross-validation hygiene:** All preprocessing and SMOTE (when used) are encapsulated inside pipelines within CV folds.\n",
-    "\n",
-    "Practical implications\n",
-    "- **Platforms/players:** Given a known opening, predicted winner probabilities can inform matchup insights; expected game length can guide time-control choices.\n",
-    "\n",
-    "Limitations\n",
-    "- No move-quality or mid-game dynamics; opening clusters are exploratory and not used as supervised features to avoid leakage.\n",
-    "- Potential dataset biases and missing features (e.g., player styles) remain.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d257e529",
-   "metadata": {},
-   "source": [
-    "# 10. Conclusion (Concise)\n",
-    "\n",
-    "- **Winner prediction, conditional on opening:** The best model (see summary) improves meaningfully over the majority baseline on balanced accuracy, demonstrating predictive value from opening + rating/time-control features without leakage.\n",
-    "- **Game length prediction:** Among linear, regularized, Random Forest, and enhanced targets, the best-performing regression (often log-transform or Poisson) reduces RMSE and MAE on skewed targets.\n",
-    "- **Methodological rigor:** CV-safe pipelines, single imbalance strategy (SMOTE in-CV), and leakage controls align with best practices.\n",
-    "\n",
-    "Future work\n",
-    "- Incorporate move-quality metrics, richer opening representations, and model calibration for probabilities.\n",
     "\n"
    ]
   }
